--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <link rel="stylesheet" type="text/css" href="./static/style.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  
 </head>
 
 <body>
 
     <!--navigation -->
     <el-menu class="el-menu-demo" mode="horizontal" active-text-color="#fff">
-        <el-menu-item><a href="/" class="logo">fendeyeee</a></el-menu-item>
+        <el-menu-item ><a  class= 'logo' href="/">fendeyeee</a></el-menu-item>
         <el-menu-item><a href="/new">新增資料</a></el-menu-item>
         <el-menu-item><a href="/introduction">使用說明</a></el-menu-item>
     </el-menu>
